@@ -638,7 +638,7 @@ public class AccountController extends Application {
                 showUpdateProgres(value);
             }
             Platform.runLater(() -> titleUpdate.setText("Индексация файлов.."));
-            checkingFiles(name, clientResponse);
+            launchMinecraft(name);
         });
     }
 
@@ -688,6 +688,7 @@ public class AccountController extends Application {
                 }
             }
 
+            launchMinecraft(name);
             paneUpdate.setVisible(false);
         });
     }
@@ -785,9 +786,58 @@ public class AccountController extends Application {
     public void initSettings() {
 
         Platform.runLater(() -> {
-            long usedMBytes = Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory();
+            long usedMBytes = Runtime.getRuntime().totalMemory();
             settingsRamLabel.setText("Доступно " + usedMBytes + " MB");
         });
+
+    }
+
+    public void launchMinecraft(String client) {
+        try {
+
+            //Runtime.getRuntime().exec("\"C:\\Users\\kiril\\Desktop\\Projects\\launcher\\jdk\\jre\\bin\\javaw.exe\" -Xmx1024M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M \"-Djava.library.path=versions\\1.12.2\\natives\" -cp \"libraries\\net\\minecraftforge\\forge\\1.12.2-14.23.5.2838\\forge-1.12.2-14.23.5.2838.jar;libraries\\net\\minecraft\\launchwrapper\\1.12\\launchwrapper-1.12.jar;libraries\\org\\ow2\\asm\\asm-all\\5.2\\asm-all-5.2.jar;libraries\\org\\jline\\jline\\3.5.1\\jline-3.5.1.jar;libraries\\net\\java\\dev\\jna\\jna\\4.4.0\\jna-4.4.0.jar;libraries\\com\\typesafe\\akka\\akka-actor_2.11\\2.3.3\\akka-actor_2.11-2.3.3.jar;libraries\\com\\typesafe\\config\\1.2.1\\config-1.2.1.jar;libraries\\org\\scala-lang\\scala-actors-migration_2.11\\1.1.0\\scala-actors-migration_2.11-1.1.0.jar;libraries\\org\\scala-lang\\scala-compiler\\2.11.1\\scala-compiler-2.11.1.jar;libraries\\org\\scala-lang\\plugins\\scala-continuations-library_2.11\\1.0.2\\scala-continuations-library_2.11-1.0.2.jar;libraries\\org\\scala-lang\\plugins\\scala-continuations-plugin_2.11.1\\1.0.2\\scala-continuations-plugin_2.11.1-1.0.2.jar;libraries\\org\\scala-lang\\scala-library\\2.11.1\\scala-library-2.11.1.jar;libraries\\org\\scala-lang\\scala-parser-combinators_2.11\\1.0.1\\scala-parser-combinators_2.11-1.0.1.jar;libraries\\org\\scala-lang\\scala-reflect\\2.11.1\\scala-reflect-2.11.1.jar;libraries\\org\\scala-lang\\scala-swing_2.11\\1.0.1\\scala-swing_2.11-1.0.1.jar;libraries\\org\\scala-lang\\scala-xml_2.11\\1.0.2\\scala-xml_2.11-1.0.2.jar;libraries\\lzma\\lzma\\0.0.1\\lzma-0.0.1.jar;libraries\\net\\sf\\jopt-simple\\jopt-simple\\5.0.3\\jopt-simple-5.0.3.jar;libraries\\java3d\\vecmath\\1.5.2\\vecmath-1.5.2.jar;libraries\\net\\sf\\trove4j\\trove4j\\3.0.3\\trove4j-3.0.3.jar;libraries\\org\\apache\\maven\\maven-artifact\\3.5.3\\maven-artifact-3.5.3.jar;libraries\\com\\mojang\\patchy\\1.1\\patchy-1.1.jar;libraries\\oshi-project\\oshi-core\\1.1\\oshi-core-1.1.jar;libraries\\net\\java\\dev\\jna\\jna\\4.4.0\\jna-4.4.0.jar;libraries\\net\\java\\dev\\jna\\platform\\3.4.0\\platform-3.4.0.jar;libraries\\com\\ibm\\icu\\icu4j-core-mojang\\51.2\\icu4j-core-mojang-51.2.jar;libraries\\net\\sf\\jopt-simple\\jopt-simple\\5.0.3\\jopt-simple-5.0.3.jar;libraries\\com\\paulscode\\codecjorbis\\20101023\\codecjorbis-20101023.jar;libraries\\com\\paulscode\\codecwav\\20101023\\codecwav-20101023.jar;libraries\\com\\paulscode\\libraryjavasound\\20101123\\libraryjavasound-20101123.jar;libraries\\com\\paulscode\\librarylwjglopenal\\20100824\\librarylwjglopenal-20100824.jar;libraries\\com\\paulscode\\soundsystem\\20120107\\soundsystem-20120107.jar;libraries\\io\\netty\\netty-all\\4.1.9.Final\\netty-all-4.1.9.Final.jar;libraries\\com\\google\\guava\\guava\\21.0\\guava-21.0.jar;libraries\\org\\apache\\commons\\commons-lang3\\3.5\\commons-lang3-3.5.jar;libraries\\commons-io\\commons-io\\2.5\\commons-io-2.5.jar;libraries\\commons-codec\\commons-codec\\1.10\\commons-codec-1.10.jar;libraries\\net\\java\\jinput\\jinput\\2.0.5\\jinput-2.0.5.jar;libraries\\net\\java\\jutils\\jutils\\1.0.0\\jutils-1.0.0.jar;libraries\\com\\google\\code\\gson\\gson\\2.8.0\\gson-2.8.0.jar;libraries\\com\\mojang\\authlib\\1.5.25\\authlib-1.5.25.jar;libraries\\com\\mojang\\realms\\1.10.22\\realms-1.10.22.jar;libraries\\org\\apache\\commons\\commons-compress\\1.8.1\\commons-compress-1.8.1.jar;libraries\\org\\apache\\httpcomponents\\httpclient\\4.3.3\\httpclient-4.3.3.jar;libraries\\commons-logging\\commons-logging\\1.1.3\\commons-logging-1.1.3.jar;libraries\\org\\apache\\httpcomponents\\httpcore\\4.3.2\\httpcore-4.3.2.jar;libraries\\it\\unimi\\dsi\\fastutil\\7.1.0\\fastutil-7.1.0.jar;libraries\\org\\apache\\logging\\log4j\\log4j-api\\2.8.1\\log4j-api-2.8.1.jar;libraries\\org\\apache\\logging\\log4j\\log4j-core\\2.8.1\\log4j-core-2.8.1.jar;libraries\\org\\lwjgl\\lwjgl\\lwjgl\\2.9.4-nightly-20150209\\lwjgl-2.9.4-nightly-20150209.jar;libraries\\org\\lwjgl\\lwjgl\\lwjgl_util\\2.9.4-nightly-20150209\\lwjgl_util-2.9.4-nightly-20150209.jar;libraries\\com\\mojang\\text2speech\\1.10.3\\text2speech-1.10.3.jar;versions\\1.12.2\\1.12.2.jar\" net.minecraft.launchwrapper.Launch --username Name --version 1.12.2-forge1.12.2-14.23.5.2838 --gameDir C:\\Users\\kiril\\Desktop\\Projects\\launcher\\client\\Minecraft_1.12.2_Forge\\ --assetsDir assets --assetIndex 1.12 --uuid 0f28983a46ce33b1aed45cdc95bf44c3 --accessToken 00000000000000000000000000000000 --userType mojang --tweakClass net.minecraftforge.fml.common.launcher.FMLTweaker --versionType Forge");
+
+            String home = System.getProperty("user.dir");
+            ArrayList<String> params = new ArrayList<>();
+
+            params.add("\"Поставишь свой путь\"");
+            params.add("-Dos.name=Windows 10");
+            params.add("-Dos.version=10.0");
+            params.add("-Xmx1024M");
+            params.add("-javaagent:authlib-injector-1.2.1.jar=" + URL);
+            params.add("-Xmn128M");
+            params.add("-XX:MaxPermSize=128m");
+            params.add("-XX:+UseConcMarkSweepGC");
+            params.add("-XX:+CMSIncrementalMode");
+            params.add("-XX:-UseAdaptiveSizePolicy");
+            params.add("\"-Djava.library.path=versions\\1.12.2\\natives\"");
+            params.add("-cp \"libraries\\net\\minecraftforge\\forge\\1.12.2-14.23.5.2838\\forge-1.12.2-14.23.5.2838.jar;libraries\\net\\minecraft\\launchwrapper\\1.12\\launchwrapper-1.12.jar;libraries\\org\\ow2\\asm\\asm-all\\5.2\\asm-all-5.2.jar;libraries\\org\\jline\\jline\\3.5.1\\jline-3.5.1.jar;libraries\\net\\java\\dev\\jna\\jna\\4.4.0\\jna-4.4.0.jar;libraries\\com\\typesafe\\akka\\akka-actor_2.11\\2.3.3\\akka-actor_2.11-2.3.3.jar;libraries\\com\\typesafe\\config\\1.2.1\\config-1.2.1.jar;libraries\\org\\scala-lang\\scala-actors-migration_2.11\\1.1.0\\scala-actors-migration_2.11-1.1.0.jar;libraries\\org\\scala-lang\\scala-compiler\\2.11.1\\scala-compiler-2.11.1.jar;libraries\\org\\scala-lang\\plugins\\scala-continuations-library_2.11\\1.0.2\\scala-continuations-library_2.11-1.0.2.jar;libraries\\org\\scala-lang\\plugins\\scala-continuations-plugin_2.11.1\\1.0.2\\scala-continuations-plugin_2.11.1-1.0.2.jar;libraries\\org\\scala-lang\\scala-library\\2.11.1\\scala-library-2.11.1.jar;libraries\\org\\scala-lang\\scala-parser-combinators_2.11\\1.0.1\\scala-parser-combinators_2.11-1.0.1.jar;libraries\\org\\scala-lang\\scala-reflect\\2.11.1\\scala-reflect-2.11.1.jar;libraries\\org\\scala-lang\\scala-swing_2.11\\1.0.1\\scala-swing_2.11-1.0.1.jar;libraries\\org\\scala-lang\\scala-xml_2.11\\1.0.2\\scala-xml_2.11-1.0.2.jar;libraries\\lzma\\lzma\\0.0.1\\lzma-0.0.1.jar;libraries\\net\\sf\\jopt-simple\\jopt-simple\\5.0.3\\jopt-simple-5.0.3.jar;libraries\\java3d\\vecmath\\1.5.2\\vecmath-1.5.2.jar;libraries\\net\\sf\\trove4j\\trove4j\\3.0.3\\trove4j-3.0.3.jar;libraries\\org\\apache\\maven\\maven-artifact\\3.5.3\\maven-artifact-3.5.3.jar;libraries\\com\\mojang\\patchy\\1.1\\patchy-1.1.jar;libraries\\oshi-project\\oshi-core\\1.1\\oshi-core-1.1.jar;libraries\\net\\java\\dev\\jna\\jna\\4.4.0\\jna-4.4.0.jar;libraries\\net\\java\\dev\\jna\\platform\\3.4.0\\platform-3.4.0.jar;libraries\\com\\ibm\\icu\\icu4j-core-mojang\\51.2\\icu4j-core-mojang-51.2.jar;libraries\\net\\sf\\jopt-simple\\jopt-simple\\5.0.3\\jopt-simple-5.0.3.jar;libraries\\com\\paulscode\\codecjorbis\\20101023\\codecjorbis-20101023.jar;libraries\\com\\paulscode\\codecwav\\20101023\\codecwav-20101023.jar;libraries\\com\\paulscode\\libraryjavasound\\20101123\\libraryjavasound-20101123.jar;libraries\\com\\paulscode\\librarylwjglopenal\\20100824\\librarylwjglopenal-20100824.jar;libraries\\com\\paulscode\\soundsystem\\20120107\\soundsystem-20120107.jar;libraries\\io\\netty\\netty-all\\4.1.9.Final\\netty-all-4.1.9.Final.jar;libraries\\com\\google\\guava\\guava\\21.0\\guava-21.0.jar;libraries\\org\\apache\\commons\\commons-lang3\\3.5\\commons-lang3-3.5.jar;libraries\\commons-io\\commons-io\\2.5\\commons-io-2.5.jar;libraries\\commons-codec\\commons-codec\\1.10\\commons-codec-1.10.jar;libraries\\net\\java\\jinput\\jinput\\2.0.5\\jinput-2.0.5.jar;libraries\\net\\java\\jutils\\jutils\\1.0.0\\jutils-1.0.0.jar;libraries\\com\\google\\code\\gson\\gson\\2.8.0\\gson-2.8.0.jar;libraries\\com\\mojang\\authlib\\1.5.25\\authlib-1.5.25.jar;libraries\\com\\mojang\\realms\\1.10.22\\realms-1.10.22.jar;libraries\\org\\apache\\commons\\commons-compress\\1.8.1\\commons-compress-1.8.1.jar;libraries\\org\\apache\\httpcomponents\\httpclient\\4.3.3\\httpclient-4.3.3.jar;libraries\\commons-logging\\commons-logging\\1.1.3\\commons-logging-1.1.3.jar;libraries\\org\\apache\\httpcomponents\\httpcore\\4.3.2\\httpcore-4.3.2.jar;libraries\\it\\unimi\\dsi\\fastutil\\7.1.0\\fastutil-7.1.0.jar;libraries\\org\\apache\\logging\\log4j\\log4j-api\\2.8.1\\log4j-api-2.8.1.jar;libraries\\org\\apache\\logging\\log4j\\log4j-core\\2.8.1\\log4j-core-2.8.1.jar;libraries\\org\\lwjgl\\lwjgl\\lwjgl\\2.9.4-nightly-20150209\\lwjgl-2.9.4-nightly-20150209.jar;libraries\\org\\lwjgl\\lwjgl\\lwjgl_util\\2.9.4-nightly-20150209\\lwjgl_util-2.9.4-nightly-20150209.jar;libraries\\com\\mojang\\text2speech\\1.10.3\\text2speech-1.10.3.jar;versions\\1.12.2\\1.12.2.jar\"");
+            params.add("net.minecraft.launchwrapper.Launch");
+            params.add("--username Name");
+            params.add("--version 1.12.2-forge1.12.2-14.23.5.2838");
+            params.add("--gameDir C:\\Users\\kiril\\Desktop\\Projects\\launcher\\client\\Minecraft_1.12.2_Forge\\");
+            params.add("--assetsDir assets");
+            params.add("--assetIndex 1.12");
+            params.add("--uuid 0f28983a46ce33b1aed45cdc95bf44c3");
+            params.add("--accessToken 00000000000000000000000000000000");
+            params.add("--userType mojang");
+            params.add("--tweakClass net.minecraftforge.fml.common.launcher.FMLTweaker");
+            params.add("--versionType Forge");
+
+            ProcessBuilder processBuilder = new ProcessBuilder(params);
+            processBuilder.directory(new File(home + "\\client\\" + client));
+            Process process = processBuilder.start();
+            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String s = "";
+            while((s = in.readLine()) != null){
+                System.out.println(s);
+            }
+            int status = process.waitFor();
+            System.out.println("Exited with status: " + status);
+
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
+        }
 
     }
 
